@@ -1,5 +1,8 @@
 Changes with Apache 1.3.15
 
+  *) Remove some human-readable fluff from the machine-readable mod_status
+     display. PR#7025 [Youichirou Koga <y-koga@apache.or.jp>]
+
   *) The new Win32 command line option, -k config, replaces the default
      options for the existing, named service with the options given on 
      the -k config command line.  Apache -n servicename -t now displays
